<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout">

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:background="@drawable/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        />

    <Spinner
        android:id="@+id/locationSpinner"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:background="@drawable/spinner"
        app:layout_constraintEnd_toEndOf="@+id/guideline_rightEnd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/guideline_servers" />

    <TextView
        android:id="@+id/locationLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/guideline_location"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintEnd_toEndOf="@+id/guideline_leftEnd"
        app:layout_constraintHorizontal_bias="0.5"
        android:text="@string/location"
        android:textColor="@color/primary_label" />

    <TextView
        android:id="@+id/locationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/locationLbl"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintEnd_toEndOf="@+id/guideline_leftEnd"
        app:layout_constraintHorizontal_bias="0.5"
        android:textSize="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/loading"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/ipLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/guideline_location"
        app:layout_constraintStart_toStartOf="@+id/guideline_right"
        app:layout_constraintEnd_toEndOf="@+id/guideline_rightEnd"
        app:layout_constraintHorizontal_bias="0.5"
        android:text="@string/ip_address"
        android:textColor="@color/primary_label" />

    <TextView
        android:id="@+id/ipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ipLbl"
        app:layout_constraintStart_toStartOf="@+id/guideline_right"
        app:layout_constraintEnd_toEndOf="@+id/guideline_rightEnd"
        app:layout_constraintHorizontal_bias="0.5"
        android:textSize="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/loading"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/inspeed"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_send"
        app:layout_constraintEnd_toStartOf="@+id/guideline_leftEnd"
        android:textColor="@color/primary_label" />

    <TextView
        android:id="@+id/inSpeedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_send"
        app:layout_constraintStart_toEndOf="@+id/guideline_leftEnd"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/outspeed"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_received"
        app:layout_constraintEnd_toStartOf="@+id/guideline_leftEnd"
        android:textColor="@color/primary_label" />

    <TextView
        android:id="@+id/outSpeedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_received"
        app:layout_constraintStart_toEndOf="@+id/guideline_leftEnd"
        android:text="@string/loading"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/elapsedLbl"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_elapsed"
        app:layout_constraintEnd_toStartOf="@+id/guideline_leftEnd"
        android:textColor="@color/primary_label" />

    <TextView
        android:id="@+id/elapsedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_elapsed"
        app:layout_constraintStart_toEndOf="@+id/guideline_leftEnd"
        android:textColor="@android:color/white" />


    <TextView
        android:id="@+id/statusLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_lbl"
        android:textColor="@color/primary_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_status"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusLbl"
        android:layout_marginTop="0dp"
        android:textSize="22sp"
        android:text="Disconnected"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/expiredLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/expired_date"
        android:textColor="@color/primary_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_bottom" />
    <TextView
        android:id="@+id/expiredText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@+id/expiredLbl"
        app:layout_constraintTop_toBottomOf="@+id/guideline_bottom"
        android:text="@string/loading"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/versionCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_bottom"
        android:text="@string/loading"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/connectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/connect"
        app:layout_constraintBottom_toTopOf="@+id/guideline_button"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintEnd_toEndOf="@+id/guideline_rightEnd"
        app:layout_constraintHorizontal_bias="0.5"/>

    <Button
        android:id="@+id/disconnectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/disconnect"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/guideline_button"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintEnd_toEndOf="@+id/guideline_rightEnd"
        app:layout_constraintHorizontal_bias="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_servers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.89" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.955" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_received"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.54" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_elapsed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.58" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.63" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.71" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.12" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_leftEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.47" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.53" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_rightEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.88" />




</android.support.constraint.ConstraintLayout>